# open-screen-reader

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_PLAN.md  LICENSE  MVP_SPEC.md  README.md  SECURITY.md  SUCCESS_METRICS.md  SURVEY.md  metrics_log.csv  mvp_issues.csv
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  lint.yml
config/: config.toml
config/keymap/: windows.toml
config/verbosity/: en-GB.toml  en.toml  sw.toml  template.toml
cpp/: CMakeLists.txt
cpp/src/: main.cpp
docs/: README.md
extensions/: README.md
po/: en_GB.po  messages.pot  sw.po
rust/: Cargo.toml
rust/src/: main.rs
scripts/: dev-setup.ps1  dev-setup.sh
testpages/: aria_widgets.html  forms.html  headings.html  index.html  landmarks.html  tables.html
