[package]
name = "opensr"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
